Switch backend to MyBatis-Plus

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -11,16 +11,13 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    open-in-view: false
   jackson:
     time-zone: Asia/Shanghai
+
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
+  type-handlers-package: com.seecen.waterinfo.config.typehandler
 
 springdoc:
   api-docs:
