--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
     time-zone: Asia/Shanghai
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 2000ms
+  cache:
+    type: redis
 
 mybatis-plus:
   configuration:
