--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -32,6 +32,11 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
 
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+
 jwt:
   secret: change-me-please
   expiration: 86400
